--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-lazy-load-image-component": "^1.5.1",
     "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.1.0",
     "react-paginate": "^7.1.3",
     "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
