--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "react-notifications": "^1.7.2",
     "react-notifications-component": "^3.1.0",
     "react-paginate": "^7.1.3",
-    "react-responsive-carousel": "^3.2.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
