--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-spring": "^9.2.4",
+    "react-tooltip": "^4.2.21",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
