--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "crypto-js": "^4.1.1",
+    "js-sha256": "^0.9.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
